# fastapi-investment-manager

./: Makefile  README.md  docker-compose.yml
.github/workflows/: pipeline.yml
infra/resources/: db.tf  main.tf  s3.tf
server/: .env.sample  pyproject.toml  settings.yml
server/src/app/: main.py
