[tool.poetry]
name = "app-name"
version = "0.1.0"
description = "App Name"
authors = ["Vitor Ramalho <ramalhodevitor@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
mangum = "^0.17.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"
moto = "^4.0.12"
factory-boy = "^3.2.1"
pytest-freezegun = "^0.4.2"
pytest-asyncio = "^0.20.3"
pytest-env = "^0.8.1"
bandit = "^1.7.4"
safety = "^2.3.5"
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "STAGE = test"
]

[tool.isort]
profile = "black"
line_length = 120
skip = ['venv']

[tool.black]
line-length = 120
target-version = ['py39']
include = '.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | \.direnv
    | \.svn
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | manage.py
    | snapshots
)/
'''

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
ignore_missing_imports = true
